--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,32 @@
 spring.application.name=campuslost
+
+# Server Configuration
+server.port=8080
+
+# Database Configuration (H2 for development)
+spring.datasource.url=jdbc:h2:mem:campuslost
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# JPA/Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# H2 Console (for development)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JWT Configuration
+app.jwt.secret=campusLostSecretKeyForJWTTokenGenerationAndValidation2024
+app.jwt.expiration=86400000
+
+# Logging
+logging.level.com.campuslost.campuslost=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+# Show SQL parameters (to see actual values instead of ?)
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
