--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.application.name=campuslost
 server.port=8081
 
 # Database Configuration (H2 for development)
-spring.datasource.url=jdbc:h2:mem:campuslost
+spring.datasource.url=jdbc:h2:file:./data/campuslost
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
